# aser

./: .env.example  .gitignore  README.md  README_CN.md  agent_test.py  api.py  decoration.py  farcaster_test.py  pyproject.toml  requirements.txt  supabase_test.py  test.md  test.py  test.sqlite  test2.py  test_api.py  test_bot.py  test_chat2web3.py  test_chromadb.py  test_claude.py  test_component.py  test_debug.db  test_discord.py  test_esper.py  test_knowledge.py  test_memory.py  test_model.py  test_telegram.py  test_trace.py  tiny_db_test.py  web3test.py
aser/: __init__.py  a2aser.py  agent.py  cli.py  evolution.py  thinking.py  tools.py  workflow.py
core/: ame_component.py  chat2web3.py  data_types.py  esper.py  knowledge.py  lib.py  memory.py  model.py
esper/: __init__.py  agent.py  chat2web3.py  cli.py  memory.py  tools.py
examples/: MSCP.md  Test.py  a2a_client.py  a2a_erc8004_server.py  a2a_server.py  a2aser.py  agent.py  agent_all.py  agent_api.py  agent_chat2web3.py  agent_cli.py  agent_cli_mscp.py  agent_cot.py  agent_discord.py  agent_evaluation.py  agent_farcaster.py  agent_knowledge.py  agent_mcp.py  agent_mcp_server.py  agent_memory.py  agent_model.py  agent_mscp.py  agent_mscp_erc8004.py  agent_recall.py  agent_search.py  agent_seika.py  agent_telegram.py  agent_text2sql.py  agent_thinking.py  agent_toolkits.py  agent_tools.py  agent_trace.py  agent_workflow.py  aser_swarms.py  aser_swarms_agent.py  chat2web3_example.py  multi_agent.py  multi_agents_hierarchical.py  multi_agents_parallel.py  multi_agents_router.py  (+6 more)
knowledge/: chroma.sqlite3
(+48 files in other folders)
